--- a/index.html
+++ b/index.html
@@ -148,9 +148,8 @@
         <div class="alert-text">
           <h1 class="alert-title">Você destravou uma oferta que quase ninguém vê.</h1>
           <p class="alert-sub">
-            A condição vitalícia do <b>Estúdio Infinito™</b> foi aberta só para uma parte das compras desta Black —
-            é a mesma oferta que eu abri apenas para os meus alunos.  
-            Você deu sorte de cair nessa página. Agora é 1x de <b>R$ 388</b> para ter acesso pra sempre.
+            A condição vitalícia do <b>Estúdio Infinito™</b> foi aberta só para uma parte das compras
+            Você deu sorte de cair nessa página.
           </p>
         </div>
       </div>
@@ -160,8 +159,7 @@
         Por 1x de R$ 388, você vira Membro Vitalício do Estúdio Infinito™.
       </h2>
       <p class="pitch">
-        Paga uma vez agora e tem acesso para sempre: todos os conteúdos, atualizações, métodos
-        e a evolução do Estúdio ao longo dos anos, sem se preocupar em renovar.
+        Paga uma vez agora e tem acesso a todas atualizações para sempre.
       </p>
 
       <!-- PREÇO -->
